update video gallery section

--- a/bookinghotel-fe/src/app/client/home/css/VideoGallery.module.css
+++ b/bookinghotel-fe/src/app/client/home/css/VideoGallery.module.css
@@ -1,4 +1,4 @@
-.bg-video-gallery{
+.videogallery{
   background-image: url('/bg-video-gallery.png');
   background-size: cover;
   background-position: center;
