--- a/bookinghotel-fe/src/app/client/home/css/Faq.module.css
+++ b/bookinghotel-fe/src/app/client/home/css/Faq.module.css
@@ -1,8 +1,6 @@
-.WhyChooseUs{
-  background-image: url('/whychooseus.png');
+.faqBackground {
+  background-image: url('/hero-1-bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-
-
