add Blog Section in Home Page

--- a/bookinghotel-fe/src/app/client/home/css/Faq.module.css
+++ b/bookinghotel-fe/src/app/client/home/css/Faq.module.css
@@ -1,5 +1,5 @@
 .faqBackground {
-  background-image: url('/hero-1-bg.png');
+  background-image: url('/faq_bg_2.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
