--- a/bookinghotel-fe/src/app/globals.css
+++ b/bookinghotel-fe/src/app/globals.css
@@ -1,5 +1,3 @@
-
-
 @import "tailwindcss";
 @plugin "tailwindcss-animate";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
@@ -9,6 +7,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @layer base {
+
   /* === PASTE 2 KHỐI VÀO ĐÂY === */
   :root {
     --font-size: 16px;
@@ -87,9 +86,11 @@
     --sidebar-border: oklch(.269 0 0);
     --sidebar-ring: oklch(.439 0 0);
   }
+
   /* === HẾT PHẦN PASTE === */
 
-  html, body {
+  html,
+  body {
     @apply antialiased font-sans;
     font-family: 'Inter', sans-serif;
   }
@@ -105,9 +106,12 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+
 .scrollbar-hide {
-  -ms-overflow-style: none; /* IE và Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE và Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .swiper-button-next,
@@ -116,7 +120,8 @@
   background-color: rgba(255, 255, 255, 0.7);
   width: 44px;
   height: 44px;
-  border-radius: 9999px; /* full circle */
+  border-radius: 9999px;
+  /* full circle */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: background-color 0.2s ease;
 }
@@ -131,41 +136,41 @@
 .swiper-button-prev::after {
   font-size: 20px;
   font-weight: 900;
-  color: #1f2937; /* text-gray-800 */
+  color: #1f2937;
+  /* text-gray-800 */
 }
 
 /* Custom Swiper Pagination Bullets */
 .swiper-pagination-bullet {
   width: 10px;
   height: 10px;
-  background-color: #d1d5db; /* text-gray-300 */
+  background-color: #d1d5db;
+  /* text-gray-300 */
   opacity: 1;
 }
 
 .swiper-pagination-bullet-active {
-  background-color: #3b82f6; /* bg-blue-500 */
+  background-color: #3b82f6;
+  /* bg-blue-500 */
 }
 
 @layer utilities {
-  /* Breakpoint nhỏ hơn 1440px */
-  @media (max-width: 1440px) {
 
-  }
+  /* Breakpoint nhỏ hơn 1440px */
+  @media (max-width: 1440px) {}
 
   /* Breakpoint nhỏ hơn 1024px */
   @media (max-width: 1024px) {
-      .lg-max\:hidden { display: none ; }
+    .lg-max\:hidden {
+      display: none;
+    }
   }
 
   /* Breakpoint nhỏ hơn 768px */
-  @media (max-width: 768px) {
-
-  }
+  @media (max-width: 768px) {}
 
   /* Breakpoint nhỏ hơn 576px */
-  @media (max-width: 576px) {
-
-  }
+  @media (max-width: 576px) {}
 }
 
 @theme inline {
@@ -279,8 +284,28 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
 
+@keyframes wingFlap {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+
+  50% {
+    transform: rotate(10deg) scale(1.05);
+  }
+
+  100% {
+    transform: rotate(0deg) scale(1);
+  }
+}
+
+.animate-wing {
+  animation: wingFlap 2s ease-in-out infinite;
+  transform-origin: center bottom;
+  opacity: 0.7;
+}
